# space

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: build.yaml  lint.yaml  test.yaml
src/: main.py
src/consts/: blur.py  cutting.py  manage_images.py  satellites.py  saturation.py  smear.py
src/db_connections/: connection.py  disruptions_enum.py  insert_object.py  update_object.py
src/modules/blurring/: blur_algorithm.py  is_blur.py  laplacian_algorithm.py  robert_algorithm.py  sobel_algorithm.py
src/modules/cutting/: cutting_algorithm.py  dodecagon.py  parallel_lines.py  parallelogram.py  vertices.py
src/modules/saturation/: saturation_algorithm.py
src/modules/smearing/: check_smeared_image.py  check_smooth.py  smear_algorithm.py
src/utils/azure/: connect_azure.py  extract_blob.py
src/utils/consts/: consts_by_satellite_name.py
src/utils/env/: get_env.py
src/utils/files/: extract_value.py  manage_folders.py
src/utils/images/: convert_image.py  convert_ntf.py  image_background.py  insert_image.py  manage_images.py  manage_sub_image.py
src/utils/logger/: delete.py  write.py
test/: test_main.py
test/db_connections/: test_connection.py  test_insert_object.py  test_update_object.py
test/modules/: test_consts_by_satellite_name.py  test_convert_ntf.py  test_extract_value.py  test_manage_folders.py  test_manage_images.py  test_polygon.py
(+15 files in other folders)
