[project]
name = "satelite_image_monitoring"
version = "1.0.0"
license = "MIT"


dependencies = [
    "gdal==3.6.3",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "python-dotenv==1.0.1",
    "pymongo==4.10.1",
    "rasterio==1.4.3",
    "scikit-image==0.25.1",
    "shapely==2.0.6",
    "pytz==2024.2",
    "azure-storage-blob==12.19.1",
]

[tool.setuptools.packages.find]
where = ["src"]
